# swapbytes

./: .gitignore  Cargo.toml  README.md
src/: events.rs  files.rs  input.rs  main.rs  utils.rs
